Add: redeploy of id and exec of id and analysis of id.
