# metal-server/src/main/java/org/metal/server/Gateway.java
@@ -301,11 +301,23 @@ public class Gateway extends AbstractVerticle {
         .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
         .handler(project::reDeploy);
 
+    router.put("/api/v1/projects/deploy/:deployId/epoch")
+        .produces("application/json")
+        .handler(BodyHandler.create())
+        .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
+        .handler(project::reDeployOfId);
+
     router.post("/api/v1/projects/name/:name/spec")
         .produces("application/json")
         .handler(BodyHandler.create())
         .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
         .handler(project::analysis);
+
+    router.post("/api/v1/projects/id/:id/spec")
+        .produces("application/json")
+        .handler(BodyHandler.create())
+        .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
+        .handler(project::analysisOfId);
 
     router.post("/api/v1/projects/name/:name/spec/current")
         .produces("application/json")
@@ -318,6 +330,12 @@ public class Gateway extends AbstractVerticle {
         .handler(BodyHandler.create())
         .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
         .handler(project::exec);
+
+    router.post("/api/v1/projects/id/:id/spec/current/exec")
+        .produces("application/json")
+        .handler(BodyHandler.create())
+        .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
+        .handler(project::execOfId);
 
     router.delete("/api/v1/projects/deploy/:deployId/force")
         .produces("application/json")
